fea-rs/test-data/compile-tests/mini-latin/bad/size_script_statement.fea
# script & language re not allowed in 'size' feature
feature size {
    script latn;
    language lang;
    parameters 1 2 3 4;
} size;
