fea-rs/test-data/compile-tests/mini-latin/bad/size_script_statement.ERR
error: size can only contain feature names and single or alternate sub rules.
in ./test-data/compile-tests/mini-latin/bad/size_script_statement.fea at 3:4
  | 
3 |     script latn;
  |     ^^^^^^^^^^^^

error: size can only contain feature names and single or alternate sub rules.
in ./test-data/compile-tests/mini-latin/bad/size_script_statement.fea at 4:4
  | 
4 |     language lang;
  |     ^^^^^^^^^^^^^^
